# matching-engine

./: README.md  generate_synthetic_data.py  sample_data_in.csv
sample_data/: expected_output.csv
src/: CMakeLists.txt  app_config.cpp  argparse.cpp  main.cpp  order.cpp  orderbook.cpp
src/include/: app_config.hpp  argparse.hpp  logger.hpp  main.hpp  order.hpp  orderbook.hpp  thread_safe_queue.hpp
